fixed z-index of Loader and ValidationMessage

--- a/src/components/UI/Loader/index.module.scss
+++ b/src/components/UI/Loader/index.module.scss
@@ -18,7 +18,7 @@
   height: 100%;
   position: relative;
   width: 100%;
-  z-index: 11;
+  z-index: 1;
 
   div {
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
