--- a/src/components/UI/ValidationMessage/index.module.scss
+++ b/src/components/UI/ValidationMessage/index.module.scss
@@ -11,7 +11,7 @@
   pointer-events: none;
   position: absolute;
   top: -35px;
-  z-index: 1;
+  z-index: 10;
 
   &::after {
     background-color: #fff;
